# chessckers

./: .gitignore  .gitmodules  CLAUDE.md  chessckers.md  gauntlet.sh  spectate-training.sh  spectate.html  start.sh  start_engine.sh  stop.sh
engine/: .gitignore  _pv_trace.py  bench_mps_multiproc.py  bench_workers.py  check_az_diff.py  check_dead_relu.py  check_king_capture.py  check_pyvariant_replay.py  check_watch_sink.py  compare_networks.py  endgame_solver.py  inspect_network.py  play_vs_random.py  probe_drift.py  pyproject.toml  pyrightconfig.json  tablebase.py  time_breakdown.py  watch_eval.py  watch_selfplay.py  watch_training.py
engine/bench/: bench_mcts.py  bench_nn_throughput.py  eval_vs_material.py  make_spectate_html.py  mps_batched_mcts_findings.md  spectate.py  vmcts.py  watch_game.py
engine/chessckers_engine/: __init__.py  __main__.py  alerter.py  checkpoints.py  cross_inference.py  dataset.py  demos.py  device.py  encoding.py  engine_uci.py  evaluate.py  fleet_arena.py  fleet_client.py  fleet_match.py  fleet_server.py  gauntlet.py  heartbeat.py  http_server.py  inference_server.py  material.py  material_player.py  mcts.py  mcts_puct.py  model.py  native_net.py  native_search.py  nn_player.py  random_player.py  render_board.py  replay_buffer.py  runtime.py  selfplay.py  selfplay_az.py  selfplay_az_async.py  selfplay_az_loop.py  selfplay_batched.py  selfplay_loop.py  selfplay_worker_async.py  selfplay_workers_only.py  server_client.py  (+6 more)
engine/chessckers_engine/variant_py/: __init__.py  client.py  moves_black.py  moves_white.py  state.py
engine/cpp/: CMakeLists.txt  build.sh
engine/cpp/src/: apply.hpp  bindings.cpp  board.hpp  chunk.hpp  client.hpp  client_main.cpp  encode.hpp  fleet_http.hpp  json_parse.hpp  movegen.hpp  movegen_white.hpp  native_move.hpp  nn.hpp  nn_backend.hpp  nn_metal.h  nn_metal.mm  search.hpp  selfplay.hpp
engine/docs/: RUNS.md  encoding-reference.md  v5-training-run.md
engine/docs/runs/: _TEMPLATE.md  deferred-low-visits.md  league-selfplay.md  run10.md  run11.md  run12.md  run13.md  run14.md  run15.md  run16.md  run17.md  run18.md  run19.md  run20.md  run21.md  run22.md  run23.md  run24.md  run25.md  run26.md  run27.md  run5.md  run6.md  run7.md  run8.md  run9.md
engine/rust/chessckers_movegen/: Cargo.toml  pyproject.toml
engine/rust/chessckers_movegen/src/: lib.rs
engine/scripts/: README.md  _run_ident.py  ab_v1_v2.sh  anchor_gauntlet.py  arena_random_vs_best.py  backrank_check_trend.py  bench_attention_device.py  bench_hd0_mmap.py  bench_resume.sh  bench_selfplay.py  bench_visits.py  cc.py  champ_ladder.py  check_chunk_parity.py  engine_uci.py  eval_bench.py  eval_history.py  game_lengths.py  game_phase_stats.py  gauntlet.py  gen_parity_corpus.py  gen_probe_suite.py  gen_rules_scenarios.py  gen_tablebase.py  install_monitor_crons.sh  ladder.py  launch_fleet.sh  leena_launch.sh  leena_sync.sh  mate_bench.py  memguard.py  play_net.py  play_tui.py  plot_run.py  run_doctor.py  solve_endgame.py  strength.py  train_endgame.sh  v3_run.sh  watch_game.py
engine/tb/: __init__.py  driver.py  enumerate.py  index.py  model.py  probe.py  store.py
engine/tests/: test_alerter.py  test_batch_eval_ragged.py  test_checkpoint_sidecar.py  test_checkpoints.py  test_cpp_all_black.py  test_cpp_apply_black.py  test_cpp_apply_white.py  test_cpp_capture_hops.py  test_cpp_capture_moves.py  test_cpp_charges.py  test_cpp_check_predicate.py  test_cpp_chunk.py  test_cpp_client.py  test_cpp_encode_parity.py  test_cpp_eval_batch.py  test_cpp_fen_roundtrip.py  test_cpp_fleet_http.py  test_cpp_jobs_local.py  test_cpp_jobs_local_batched.py  test_cpp_match.py  test_cpp_mcts_native.py  test_cpp_mcts_parity.py  test_cpp_metal.py  test_cpp_nn_parity.py  test_cpp_perft_replay.py  test_cpp_quiet_deploy.py  test_cpp_selfplay_batched.py  test_cpp_selfplay_native.py  test_cpp_selfplay_threaded.py  test_cpp_white_moves.py  test_cross_inference.py  test_dataset.py  test_demos.py  test_encoding.py  test_evaluate.py  test_fleet_bin_net.py  test_fleet_bin_sync.py  test_fleet_engine_pool.py  test_fleet_gate_bin.py  test_fleet_gate_panel.py  (+43 more)
scripts/: active_remotes.env  buffer_rate.py  cc_lib.sh  cloud_provision.sh  cloud_sync_sidecar.sh  com.chessckers.watchdog.plist  deploy_fresh.sh  fleet.env  launch_all.sh  launch_fleet_leena.sh  launch_gcp.sh  launch_leena.sh  launch_local.sh  launch_local_client.sh  launch_next.sh  launch_server.sh  launch_workers.sh  leena_net_probe.py  play.sh  run_4070ti.sh  seed_mix.txt  status.sh  stop_local.sh  stop_run.sh  stop_workers.sh  train_cloud.sh  train_cloud_async.sh  vast_market_watch.sh  version_poll_repro.py  visualize  watchdog.sh
scripts/gcp/: create-mig.sh  create-node.sh  scale.sh  startup.sh
scripts/targets/: leena.env  local.env  vast.env
