[project]
name = "chessckers-engine"
version = "0.0.1"
description = "Neural-net-guided engine for the Chessckers variant"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "torch>=2.2",
    "chess>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chessckers_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
