[project]
name = "chessckers-engine"
version = "0.0.1"
description = "Neural-net-guided engine for the Chessckers variant"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "torch>=2.2",
    "chess>=1.10",
    "wandb>=0.17",
    # native_net.export_state_dict calls Tensor.numpy() when publishing weights.bin;
    # torch's resolved closure here doesn't pull numpy, so declare it explicitly or
    # a fresh `uv sync` omits it and the trainer crashes on first net publish.
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chessckers_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that spawn subprocesses; opt in with -m slow",
]
