[build-system]
requires = ["maturin>=1.3,<2"]
build-backend = "maturin"

[project]
name = "chessckers_movegen"
version = "0.1.0"
description = "Chessckers Black-side move generation, native (PyO3)."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
